[package]
name = "takparse"
version = "0.6.0"
edition = "2021"
license = "MIT"
rust-version = "1.65"

description = "Parse, manipulate, and stringify common Tak board game formats"
homepage = "https://github.com/ViliamVadocz/takparse"
documentation = "https://docs.rs/takparse"
repository = "https://github.com/ViliamVadocz/takparse"
readme = "README.md"

keywords = ["tak", "game", "parse", "display"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
